--- a/index.qmd
+++ b/index.qmd
@@ -3,11 +3,15 @@ title: "NOAA Fisheries PAM-Equipped Glider Research"
 page-layout: full
 ---
 
-*This project is a part of NOAA Fisheries [PAM SI coordination](https://nmfs-ost.github.io/PAM_National_Network/content/SI%20coord/SI_Coordination.html)*
+*This project is a part of NOAA Fisheries [PAM SI
+coordination](https://nmfs-ost.github.io/PAM_National_Network/content/SI%20coord/SI_Coordination.html)*
 
-:::::: columns
-::: {.column width="75%"}
-Passive Acoustic Monitoring is an effective means of monitoring marine mammals and the marine environment, and NOAA Fisheries is expanding their efforts into PAM-equipped underwater gliders as a means of conducting this research to meet their management needs.
+::: page-layout
+::: main-content
+Passive Acoustic Monitoring is an effective means of monitoring marine
+mammals and the marine environment, and NOAA Fisheries is expanding
+their efforts into PAM-equipped underwater gliders as a means of
+conducting this research to meet their management needs.
 
 This site provides updated information on these efforts.
 
@@ -16,13 +20,23 @@ This site provides updated information on these efforts.
 *Information provided here is ongoing, and is frequently updated.*
 :::
 
-:::: {.column width="25%"}
-::: {.callout-tip title="News!"}
-Newsworthy Updates!
+::: media-sidebar
+### Featured
+
+::: media-card
+![](content/images/Selene_soundbytes.jpg)
+<a href="https://www.fisheries.noaa.gov/science-blog/sound-bytes-its-boat-its-plane-its-passive-acoustic-ocean-glider">
+<strong>Sound Bytes Blog: It's a boat, it's a plane, it's a passive
+acoustic ocean glider!</strong><br> Selene Fregosi (PIFSC) explains how
+underwater gliders help us listen for whales! </a>
 :::
 
-[Sound Bytes Blog: It's a boat, it's a plane, it's a passive acoustic ocean glider!](https://www.fisheries.noaa.gov/science-blog/sound-bytes-its-boat-its-plane-its-passive-acoustic-ocean-glider) Selene Fregosi (PIFSC) explains how underwater gliders help us listen for whales! ![](content/images/Selene_soundbytes.jpg){width="348"}
+::: media-card
+![](content/images/Glider_Preparations-MMTD-SWFSC.png)
+<a href="https://www.fisheries.noaa.gov/news/ocean-gliders-listen-whales-oregon-test-new-ways-count-them?utm_medium=email&utm_source=govdelivery">
+<strong>Ocean Gliders Listen for Whales off Oregon in Test of New Ways
+to Count Them</strong><br> Passive acoustic monitoring by 'gliders' may
+better detect some species </a>
+:::
+:::
 
-[Ocean Gliders Listen for Whales off Oregon in Test of New Ways to Count Them](https://www.fisheries.noaa.gov/news/ocean-gliders-listen-whales-oregon-test-new-ways-count-them?utm_medium=email&utm_source=govdelivery) Passive acoustic monitoring by 'gliders' may better detect some species ![](content/images/Glider_Preparations-MMTD-SWFSC.png){width="350"}
-::::
-::::::
