Remove Glider Rodeo logo
Remove Glider Rodeo Logo

--- a/content/glider-rodeo.qmd
+++ b/content/glider-rodeo.qmd
@@ -6,15 +6,7 @@ editor:
     wrap: 72
 ---
 
-::::: columns
-::: {.column width="75%"}
-![](images/GliderRodeoText.JPG)
-:::
-
-::: {.column width="25%"}
-![](images/GliderRodeo.png)
-:::
-:::::
+## *(Underwater Glider Challenge)*
 
 ## Goals
 
