--- a/index.qmd
+++ b/index.qmd
@@ -22,9 +22,20 @@ This site provides updated information on these efforts.
 
 ::: media-sidebar
 ### Featured
+::: media-card
+![](content/images/media/Glider_challenge_soundBytes.JPG)
+<a href="https://www.fisheries.noaa.gov/science-blog/sound-bytes-meet-pilots-underwater-glider-challenge">
+<strong>Sound Bytes: Meet the Pilots of the Underwater Glider Challenge</strong><br>A conversation with the NOAA pilots guiding gliders to capture the sounds of our ocean</a>
+:::
 
 ::: media-card
-![](content/images/Selene_soundbytes.jpg)
+![](content/images/media/Glider_challende_feature_story.jpg)
+<a href="https://www.fisheries.noaa.gov/feature-story/noaa-fisheries-launches-underwater-glider-challenge-hawaii">
+<strong>NOAA Fisheries Launches Underwater Glider Challenge in Hawai‘i</strong><br>NOAA Fisheries is leading a major effort to evaluate how next-generation ocean gliders can transform ocean monitoring and marine mammal conservation, while also benefitting U.S. fishermen and ocean industries</a>
+:::
+
+::: media-card
+![](content/images/media/Selene_soundbytes.jpg)
 <a href="https://www.fisheries.noaa.gov/science-blog/sound-bytes-its-boat-its-plane-its-passive-acoustic-ocean-glider">
 <strong>Sound Bytes Blog: It's a boat, it's a plane, it's a passive
 acoustic ocean glider!</strong><br> Selene Fregosi (PIFSC) explains how
@@ -32,7 +43,7 @@ underwater gliders help us listen for whales! </a>
 :::
 
 ::: media-card
-![](content/images/Glider_Preparations-MMTD-SWFSC.png)
+![](content/images/media/Glider_Preparations-MMTD-SWFSC.png)
 <a href="https://www.fisheries.noaa.gov/news/ocean-gliders-listen-whales-oregon-test-new-ways-count-them?utm_medium=email&utm_source=govdelivery">
 <strong>Ocean Gliders Listen for Whales off Oregon in Test of New Ways
 to Count Them</strong><br> Passive acoustic monitoring by 'gliders' may
