Updated formatting for bold sections

--- a/content/about.qmd
+++ b/content/about.qmd
@@ -5,7 +5,7 @@ page-layout: full
 
 ## Accelerating the Use of Passive Acoustic-Equipped Gliders to Monitor and Assess Cetacean Populations
 
-*Why This matters:* NOAA Fisheries is mandated by Congress to monitor marine mammals to mitigate current risks and support sustainable oceans by improving our understanding of marine mammals as functioning parts of marine ecosystems. PAM-equipped gliders allow for a more economical approach to improving our understanding of marine mammals and supporting their long-term conservation.
+__*Why This matters:*__ NOAA Fisheries is mandated by Congress to monitor marine mammals to mitigate current risks and support sustainable oceans by improving our understanding of marine mammals as functioning parts of marine ecosystems. PAM-equipped gliders allow for a more economical approach to improving our understanding of marine mammals and supporting their long-term conservation.
 
 To this end, NOAA Fisheries will lead a 3 year effort to accelerate a transition to operations for using PAM-based glider surveys to augment existing surveys. These efforts are based on previous successful research efforts using PAM-equipped gliders off the U.S. East Coast to study right whales, and recent testing of Seagliders off Hawaiʻi. Slocum gliders are being used for real-time monitoring of North Atlantic right whales off the U.S. Atlantic coast through a [NEFSC/WHOI collaboration](https://www.whoi.edu/news-insights/content/teaming-up-for-right-whales){target="_blank"}. NOAA's OMAO UxS Operation Center partnered with PIFSC to test PAM-equipped Seagliders to augment ship-based surveys across the vast Pacific Islands region. The results from these studies highlighted that PAM-equipped gliders can augment and replace some ship-based survey efforts, informing climate assessments, including changes in range or space use, and quantitative metrics, including density.
 
